# lightclaw

./: .gitignore  Cargo.toml  README.md  install.sh  release.sh
public/: index.html
scripts/: build.sh  install.sh  release.sh
src/: bus.rs  config.rs  configure.rs  discord.rs  lib.rs  main.rs  service.rs  telegram.rs  uninstall.rs
src/agent/: mod.rs
src/memory/simple/: file_store.rs
src/memory/smart/: vector_store.rs
src/skills/: cli.rs
src/tools/: memory.rs  mod.rs  web.rs
