[package]
name = "femtobot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "5"
html2text = "0.6"
http = "1"
pulldown-cmark = { version = "0.13", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "rustls-native-roots", "ctrlc_handler"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
url = "2"
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Optional for cron
cron = "0.12"
dashmap = "6"
etcetera = "0.11.0"
# tokio-cron-scheduler = "0.11"
